Convert CSS  to SCSS

--- a/src/components/TodoList/TodoList.module.scss
+++ b/src/components/TodoList/TodoList.module.scss
@@ -1,3 +1,4 @@
+@import '../Sass/variable';
 .main {
     position: relative;
     z-index: 2;
@@ -8,108 +9,87 @@
     margin: 0;
     padding: 0;
     list-style: none;
-}
-
-.todoList li {
-    position: relative;
-    font-size: 24px;
-    border-bottom: 1px solid #ededed;
-}
-
-.todoList li:last-child {
-    border-bottom: none;
-}
-
-.todoList li.editing {
-    border-bottom: none;
-    padding: 0;
-}
-
-.todoList li.editing .edit {
-    display: block;
-    width: 506px;
-    padding: 12px 16px;
-    margin: 0 0 0 43px;
-}
-
-.todoList li .toggle {
-    text-align: center;
-    width: 40px;
-    /* auto, since non-WebKit browsers doesn't support input styling */
-    height: auto;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    margin: auto 0;
-    border: none;
-    /* Mobile Safari */
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-}
-
-.todoList li .toggle {
-    opacity: 0;
-}
-
-.todoList li .toggle+label {
-    /*
-		Firefox requires `#` to be escaped - https://bugzilla.mozilla.org/show_bug.cgi?id=922433
-		IE and Edge requires *everything* to be escaped to render, so we do that instead of just the `#` - https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/7157459/
-	*/
-    background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
-    background-repeat: no-repeat;
-    background-position: center left;
-}
-
-.todoList li .toggle:checked+label {
-    background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
-}
-
-.todoList li label {
-    word-break: break-all;
-    padding: 15px 15px 15px 60px;
-    display: block;
-    line-height: 1.2;
-    -webkit-transition: color 0.4s;
-    transition: color 0.4s;
-}
-
-.todoList li.completed label {
-    color: #d9d9d9;
-    text-decoration: line-through;
-}
-
-.todoList li .edit {
-    display: none;
-}
-
-.todoList li.editing:last-child {
-    margin-bottom: -1px;
-}
-
-.todoList li .destroy {
-    display: none;
-    position: absolute;
-    top: 0;
-    right: 10px;
-    bottom: 0;
-    width: 40px;
-    height: 40px;
-    margin: auto 0;
-    font-size: 30px;
-    color: #cc9a9a;
-    margin-bottom: 11px;
-    -webkit-transition: color 0.2s ease-out;
-    transition: color 0.2s ease-out;
+    li {
+        position: relative;
+        font-size: 24px;
+        border-bottom: 1px solid #ededed;
+        label {
+            word-break: break-all;
+            padding: 15px 15px 15px 60px;
+            display: block;
+            line-height: 1.2;
+            -webkit-transition: color 0.4s;
+            transition: color 0.4s;
+        }
+        >.completed {
+            label {
+                color: #d9d9d9;
+                text-decoration: line-through;
+            }
+        }
+        .toggle {
+            text-align: center;
+            width: 40px;
+            /* auto, since non-WebKit browsers doesn't support input styling */
+            height: auto;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            margin: auto 0;
+            border: none;
+            /* Mobile Safari */
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            opacity: 0;
+        }
+        .destroy {
+            display: none;
+            position: absolute;
+            top: 0;
+            right: 10px;
+            bottom: 0;
+            width: 40px;
+            height: 40px;
+            margin: auto 0;
+            font-size: 30px;
+            color: $pink;
+            margin-bottom: 11px;
+            -webkit-transition: color 0.2s ease-out;
+            transition: color 0.2s ease-out;
+        }
+        &+label {
+            /*
+                Firefox requires `#` to be escaped - https://bugzilla.mozilla.org/show_bug.cgi?id=922433
+                IE and Edge requires *everything* to be escaped to render, so we do that instead of just the `#` - https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/7157459/
+            */
+            background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
+            background-repeat: no-repeat;
+            background-position: center left;
+        }
+        &::last-child {
+            border-bottom: none;
+        }
+        &:checked+label {
+            background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
+        }
+    }
 }
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     .toggle-all,
-    .todoList li .toggle {
-        background: none;
+    .todoList {
+        li {
+            .toggle {
+                background: none;
+            }
+        }
     }
-    .todoList li .toggle {
-        height: 40px;
+    .todoList {
+        li {
+            .toggle {
+                height: 40px;
+            }
+        }
     }
 }
