--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,3 +1,4 @@
+@import '../Sass/variable.scss';
 html,
 body {
     margin: 0;
@@ -47,37 +48,40 @@ body {
     margin: 130px 0 40px 0;
     position: relative;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
-}
-
-.todoapp input::-webkit-input-placeholder {
-    font-style: italic;
-    font-weight: 300;
-    color: #e6e6e6;
-}
-
-.todoapp input::-moz-placeholder {
-    font-style: italic;
-    font-weight: 300;
-    color: #e6e6e6;
-}
-
-.todoapp input::input-placeholder {
-    font-style: italic;
-    font-weight: 300;
-    color: #e6e6e6;
-}
-
-.todoapp h1 {
-    position: absolute;
-    top: -155px;
-    width: 100%;
-    font-size: 100px;
-    font-weight: 100;
-    text-align: center;
-    color: rgba(175, 47, 47, 0.15);
-    -webkit-text-rendering: optimizeLegibility;
-    -moz-text-rendering: optimizeLegibility;
-    text-rendering: optimizeLegibility;
+    input {
+        &::-webkit-input-placeholder {
+            font-style: italic;
+            font-weight: 300;
+            color: $white;
+        }
+        &::-webkit-input-placeholder {
+            font-style: italic;
+            font-weight: 300;
+            color: $white;
+        }
+        &::-moz-placeholder {
+            font-style: italic;
+            font-weight: 300;
+            color: $white;
+        }
+        &::input-placeholder {
+            font-style: italic;
+            font-weight: 300;
+            color: $white;
+        }
+    }
+    h1 {
+        position: absolute;
+        top: -155px;
+        width: 100%;
+        font-size: 100px;
+        font-weight: 100;
+        text-align: center;
+        color: rgba(175, 47, 47, 0.15);
+        -webkit-text-rendering: optimizeLegibility;
+        -moz-text-rendering: optimizeLegibility;
+        text-rendering: optimizeLegibility;
+    }
 }
 
 .toggle-all {
@@ -89,28 +93,25 @@ body {
     position: absolute;
     right: 100%;
     bottom: 100%;
-}
-
-.toggle-all+label {
-    width: 60px;
-    height: 34px;
-    font-size: 0;
-    position: absolute;
-    top: -52px;
-    left: -13px;
-    -webkit-transform: rotate(90deg);
-    transform: rotate(90deg);
-}
-
-.toggle-all+label:before {
-    content: '\276F';
-    font-size: 22px;
-    color: #e6e6e6;
-    padding: 10px 27px 10px 27px;
-}
-
-.toggle-all:checked+label:before {
-    color: #737373;
+    &+label {
+        width: 60px;
+        height: 34px;
+        font-size: 0;
+        position: absolute;
+        top: -52px;
+        left: -13px;
+        -webkit-transform: rotate(90deg);
+        transform: rotate(90deg);
+        &:before {
+            content: '\276F';
+            font-size: 22px;
+            color: $white;
+            padding: 10px 27px 10px 27px;
+        }
+        &:before {
+            color: #737373;
+        }
+    }
 }
 
 .footer {
@@ -118,27 +119,25 @@ body {
     padding: 10px 15px;
     height: 20px;
     text-align: center;
-    border-top: 1px solid #e6e6e6;
-}
-
-.footer:before {
-    content: '';
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    height: 50px;
-    overflow: hidden;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2);
+    border-top: 1px solid $white;
+    &:before {
+        content: '';
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        height: 50px;
+        overflow: hidden;
+        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2);
+    }
 }
 
 .todo-count {
     float: left;
     text-align: left;
-}
-
-.todo-count strong {
-    font-weight: 300;
+    strong {
+        font-weight: 300;
+    }
 }
 
 .filters {
@@ -148,40 +147,42 @@ body {
     position: absolute;
     right: 0;
     left: 0;
-}
-
-.filters li {
-    display: inline;
-}
-
-.filters li a {
-    color: inherit;
-    margin: 3px;
-    padding: 3px 7px;
-    text-decoration: none;
-    border: 1px solid transparent;
-    border-radius: 3px;
-}
-
-.filters li a:hover {
-    border-color: rgba(175, 47, 47, 0.1);
-}
-
-.filters li a.selected {
-    border-color: rgba(175, 47, 47, 0.2);
+    li {
+        display: inline;
+        a {
+            color: inherit;
+            margin: 3px;
+            padding: 3px 7px;
+            text-decoration: none;
+            border: 1px solid transparent;
+            border-radius: 3px;
+            >.selected {
+                border-color: rgba(175, 47, 47, 0.2);
+            }
+            &:hover {
+                border-color: rgba(175, 47, 47, 0.1);
+            }
+        }
+    }
 }
 
 .clear-completed,
-html .clear-completed:active {
-    float: right;
-    position: relative;
-    line-height: 20px;
-    text-decoration: none;
-    cursor: pointer;
+html {
+    .clear-completed {
+        &:active {
+            float: right;
+            position: relative;
+            line-height: 20px;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    }
 }
 
-.clear-completed:hover {
-    text-decoration: underline;
+.clear-completed {
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 .info {
@@ -190,20 +191,17 @@ html .clear-completed:active {
     font-size: 10px;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
     text-align: center;
-}
-
-.info p {
-    line-height: 1;
-}
-
-.info a {
-    color: inherit;
-    text-decoration: none;
-    font-weight: 400;
-}
-
-.info a:hover {
-    text-decoration: underline;
+    p {
+        line-height: 1;
+    }
+    a {
+        color: inherit;
+        text-decoration: none;
+        font-weight: 400;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
 
 
